--- a/video.html
+++ b/video.html
@@ -19,7 +19,7 @@
 	<figure>
 
 		<video class = "video" 
-			autoplay="true"  
+			autoplay="false"  
 			width="640" 
 			height="360" 
 			id="player1" 
